# apparent

./: .gitignore  README.md  pyproject.toml
apparent/: __init__.py  reports.py
html/apparent/: index.html  timing.html
tests/: timer_reports_tests.py
