[project]
name = "apparent"
dynamic = ["version"]
description = "A toolkit for code observability in-process data collection: timing, counters, and metrics."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["apparent", "observability", "monitoring", "timers", "timing", "counters", "metrics"]
authors = [{name = "Arnon Moscona", email = "arnon@moscona.com"}]
maintainers = [{name = "Arnon Moscona", email = "arnon@moscona.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
repository = "https://github.com/arnonmoscona/apparent"

[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[tool.setuptools]
packages = ["apparent"]

[project.optional-dependencies]
test = [
    "coverage"
]
dev = [
    "pdoc", "bumpver", "flit_core >=3.4", "coverage"
]

[tool.flit.sdist]
include = ["doc/", "apparent/", "bin/", "LICENSE.txt"]
exclude = ["draft/", ".idea", ".coverage", ".python-version", "todos.md"]

[tool.bumpver]
current_version = "0.1.5"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"apparent/__init__.py" = [
    "{version}",
]

